--- a/src/Pages/Home/Navigation/Navigation.css
+++ b/src/Pages/Home/Navigation/Navigation.css
@@ -7,7 +7,8 @@
   font-size: 24px;
   font-weight: bold;
   text-decoration: none;
-  margin-right: 20px;
+  margin-right: 10px;
+  background-color: transparent;
 }
 .logo:hover {
   border-bottom: none !important;
@@ -27,7 +28,8 @@
   font-size: 18px;
   font-weight: bold;
   text-decoration: none;
-  margin-right: 20px;
+  margin-right: 13px;
+  background-color: transparent;
 }
 .active a:hover {
   color: rgb(171, 171, 172);
